Vagrant の起動チェックスクリプトを呼ぶ

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,9 +14,12 @@ set -g default-command "reattach-to-user-namespace -l zsh"
 #bind C-p run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 bind C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
+# color
+set -g default-terminal "screen-256color"
+
 # vagrant status
 # あとで見直す
-# set -g status-right '#[bg=black,fg=yellow]#($HOME/bin/vagrant-status)'
+set -g status-right '#[bg=black,fg=yellow]#($HOME/bin/vagrant-status)'
 
 # one based index (C-b 1, 2...)
 set -g base-index 1
