--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set -g prefix C-j
 unbind-key C-b
 
+# vi keybind
+set-window-option -g mode-keys vi
+
 # .tmux.conf reloaded
 # from http://d.hatena.ne.jp/kiririmode/20120321/p1
 bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded."
