--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ unbind-key C-b
 
 # vi keybind
 set-window-option -g mode-keys vi
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # .tmux.conf reloaded
 # from http://d.hatena.ne.jp/kiririmode/20120321/p1
