--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,7 +23,8 @@ bind C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
 set -g default-terminal "screen-256color"
 
 # vagrant status
-# あとで見直す
+# ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
+# 右下に起動中の VM を一覧表示
 set -g status-right '#[bg=black,fg=yellow]#($HOME/bin/vagrant-status)'
 
 # one based index (C-b 1, 2...)
