--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,60 +1,45 @@
-# prefix (avoid vim C-b)
+# ---------------------------------------------------------------------------- "
+# basic
+# ---------------------------------------------------------------------------- "
+
+# プレフィックスキーを Ctrl+j キーにする
 set -g prefix C-j
+
+# 元々のプレフィックスキーの Ctrl+b だと Vim とかぶるので退避
 unbind-key C-b
 
-# vi keybind
+# I love Vim.
 set-window-option -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# .tmux.conf reloaded
-# from http://d.hatena.ne.jp/kiririmode/20120321/p1
-bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded."
+# ウィンドウ、ペインの番号を1から始まるようにする
+# （キーボード配置は1が左にあるので選択しやすい）
+set -g base-index 1
+set -g pane-base-index 1
 
-# yank & paste
-# from https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/
-#      http://d.hatena.ne.jp/koseki2/20110816/TmuxCopy
+# Mac でクリップボード（ペーストボード）を使いやすく
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/
+# http://d.hatena.ne.jp/koseki2/20110816/TmuxCopy
 set -g default-command "reattach-to-user-namespace -l zsh"
 #bind C-y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 #bind C-p run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 bind C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
-# color
-set -g default-terminal "screen-256color"
 
-# vagrant status
-# ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
-# 右下に起動中の VM を一覧表示
-set -g status-right '#[bg=black,fg=yellow]#($HOME/bin/vagrant-status)'
+# ---------------------------------------------------------------------------- "
+# mapping
+# ---------------------------------------------------------------------------- "
 
-# one based index (C-b 1, 2...)
-set -g base-index 1
-set -g pane-base-index 1
+# .tmux.conf の再読み込みを [prefix] r キーに割り当て
+# http://d.hatena.ne.jp/kiririmode/20120321/p1
+bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded."
 
-# title
-set -g set-titles on
+# コピーモードの始まりを v に割り当て
+bind-key -t vi-copy v begin-selection
 
-# status line
-set -g status-utf8 on
-set -g status-interval 5
-set -g status-bg black
-set -g status-fg white
+# コピーモードの終わりを y に割り当て
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# active pane (display-panes prefix + q)
-setw -g window-status-current-bg black
-setw -g window-status-current-fg yellow
-set -g status-left '#P'
-set -g display-panes-time 2000
-set -g display-panes-colour white
-set -g display-panes-active-colour yellow
-
-# mouse settings
-#set-option -g mode-mouse on
-#set-option -g mouse-resize-pane on
-#set-option -g mouse-select-pane on
-#set-option -g mouse-select-window on
-
-# move pane with vim key bind
+# ペイン操作を Vi ライクに
 unbind -n J
 unbind -n K
 unbind -n L
@@ -67,4 +52,46 @@ bind -r J resize-pane -D
 bind -r K resize-pane -U
 bind -r L resize-pane -L
 bind -r H resize-pane -R
+
+
+# ---------------------------------------------------------------------------- "
+# appearance
+# ---------------------------------------------------------------------------- "
+
+# タイトル表示あり
+set -g set-titles on
+
+# カラー基本設定
+set -g default-terminal "screen-256color"
+
+# ステータスラインのカラー
+setw -g window-status-current-bg black
+setw -g window-status-current-fg yellow
+
+
+# ---------------------------------------------------------------------------- "
+# statusline
+# ---------------------------------------------------------------------------- "
+
+# ステータスラインの基本設定
+set -g status-utf8 on
+set -g status-interval 5
+set -g status-bg black
+set -g status-fg yellow
+
+# 右下に起動中の VM を一覧表示
+# ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
+set -g status-right '#($HOME/bin/vagrant-status)'
+
+# ステータスラインの左下に現在のウィンドウ番号を表示
+set -g status-left '#[bg=yellow,fg=black][ #I ]'
+
+# [prefix] q でペイン一覧表示したときの秒数
+set -g display-panes-time 2000
+
+# [prefix] q でペイン一覧表示したときの通常カラー
+set -g display-panes-colour white
+
+# [prefix] q でペイン一覧表示したときのアクティブカラー
+set -g display-panes-active-colour yellow
 
