省略記法をやめてコメント分かりやすく

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 # ---------------------------------------------------------------------------- "
 
 # プレフィックスキーを Ctrl+j キーにする
-set -g prefix C-j
+set-option -g prefix C-j
 
 # 元々のプレフィックスキーの Ctrl+b だと Vim とかぶるので退避
 unbind-key C-b
@@ -13,16 +13,16 @@ set-window-option -g mode-keys vi
 
 # ウィンドウ、ペインの番号を1から始まるようにする
 # （キーボード配置は1が左にあるので選択しやすい）
-set -g base-index 1
-set -g pane-base-index 1
+set-option -g base-index 1
+set-option -g pane-base-index 1
 
 # Mac でクリップボード（ペーストボード）を使いやすく
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/
 # http://d.hatena.ne.jp/koseki2/20110816/TmuxCopy
-set -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 #bind C-y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 #bind C-p run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-bind C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
+bind-key C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
 
 # ---------------------------------------------------------------------------- "
@@ -40,18 +40,18 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # ペイン操作を Vi ライクに
-unbind -n J
-unbind -n K
-unbind -n L
-unbind -n H
-bind j select-pane -D
-bind k select-pane -U
-bind h select-pane -L
-bind l select-pane -R
-bind -r J resize-pane -D
-bind -r K resize-pane -U
-bind -r L resize-pane -L
-bind -r H resize-pane -R
+unbind-key -n J
+unbind-key -n K
+unbind-key -n L
+unbind-key -n H
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key h select-pane -L
+bind-key l select-pane -R
+bind-key -r J resize-pane -D
+bind-key -r K resize-pane -U
+bind-key -r L resize-pane -L
+bind-key -r H resize-pane -R
 
 
 # ---------------------------------------------------------------------------- "
@@ -59,39 +59,45 @@ bind -r H resize-pane -R
 # ---------------------------------------------------------------------------- "
 
 # タイトル表示あり
-set -g set-titles on
+set-option -g set-titles on
 
 # カラー基本設定
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
 # ステータスラインのカラー
-setw -g window-status-current-bg black
-setw -g window-status-current-fg yellow
+set-window-option -g window-status-current-bg black
+set-window-option -g window-status-current-fg yellow
 
 
 # ---------------------------------------------------------------------------- "
 # statusline
 # ---------------------------------------------------------------------------- "
 
-# ステータスラインの基本設定
-set -g status-utf8 on
-set -g status-interval 5
-set -g status-bg black
-set -g status-fg yellow
+# UTF-8 使っていいかどうか
+set-option -g status-utf8 on
+
+# ステータスラインのアップデート間隔（秒）
+set-option -g status-interval 5
+
+# ステータスラインの背景色
+set-option -g status-bg black
+
+# ステータスラインの文字色
+set-option -g status-fg yellow
 
 # 右下に起動中の VM を一覧表示
 # ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
-set -g status-right '#($HOME/bin/vagrant-status)'
+set-option -g status-right '#($HOME/bin/vagrant-status)'
 
 # ステータスラインの左下に現在のウィンドウ番号を表示
-set -g status-left '#[bg=yellow,fg=black][ #I ]'
+set-option -g status-left '#[bg=yellow,fg=black][ #I ]'
 
 # [prefix] q でペイン一覧表示したときの秒数
-set -g display-panes-time 2000
+set-option -g display-panes-time 2000
 
 # [prefix] q でペイン一覧表示したときの通常カラー
-set -g display-panes-colour white
+set-option -g display-panes-colour white
 
 # [prefix] q でペイン一覧表示したときのアクティブカラー
-set -g display-panes-active-colour yellow
+set-option -g display-panes-active-colour yellow
 
