現在のウィンドウがどれかもっと分かりやすく

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,8 +89,12 @@ set-option -g status-fg yellow
 # ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
 set-option -g status-right '#($HOME/bin/vagrant-status)'
 
-# ステータスラインの左下に現在のウィンドウ番号を表示
-set-option -g status-left '#[bg=yellow,fg=black][ #I ]'
+# ステータスラインの左下のスペースは一旦使わない
+set-option -g status-left ''
+
+# ウィンドウ一覧表示でカレントを色反転に
+set-window-option -g window-status-format "[#I:#W]"
+set-window-option -g window-status-current-format "#[bg=yellow,fg=black][#I:#W]"
 
 # [prefix] q でペイン一覧表示したときの秒数
 set-option -g display-panes-time 2000
