tmux でウィンドウ閉じたときに番号振り直して詰める

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 #bind C-p run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 bind-key C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
+# ウィンドウ閉じたときに番号振り直して詰める
+set-option -g renumber-windows on
+
 
 # ---------------------------------------------------------------------------- "
 # mapping
