気軽にプロジェクト用のペイン管理

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,3 +108,12 @@ set-option -g display-panes-colour white
 # [prefix] q でペイン一覧表示したときのアクティブカラー
 set-option -g display-panes-active-colour yellow
 
+
+# ---------------------------------------------------------------------------- "
+# extra
+# ---------------------------------------------------------------------------- "
+
+# 予め用意した proj シェルスクリプトに tmux の入力受け付けで引数を渡す
+# シェルスクリプト上でエディタ、シェル、タスクランナーなどに分割表示
+bind-key P command-prompt -p "projectname:" "run-shell 'proj %1'"
+
