右下のステータスの長さを50文字まで入るようにした

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -91,6 +91,7 @@ set-option -g status-fg yellow
 # 右下に起動中の VM を一覧表示
 # ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
 set-option -g status-right '#($HOME/bin/vagrant-status)'
+set-option -g status-right-length 50
 
 # ステータスラインの左下のスペースは一旦使わない
 set-option -g status-left ''
