ざっくりアップデート

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,13 +19,20 @@ set-option -g pane-base-index 1
 # Mac でクリップボード（ペーストボード）を使いやすく
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/
 # http://d.hatena.ne.jp/koseki2/20110816/TmuxCopy
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g default-command 'reattach-to-user-namespace -l zsh'
 #bind C-y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 #bind C-p run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 bind-key C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
 
 # ウィンドウ閉じたときに番号振り直して詰める
 set-option -g renumber-windows on
+
+# 新規ウィンドウ、ペイン分割時にパス引き継ぎ
+# http://qiita.com/naoty_k/items/954d1d0080d0a7d52584
+bind-key    c     new-window -c "#{pane_current_path}"
+bind-key    %     split-window -h -c "#{pane_current_path}"
+bind-key    '"'     split-window -v -c "#{pane_current_path}"
+
 
 
 # ---------------------------------------------------------------------------- "
@@ -34,13 +41,13 @@ set-option -g renumber-windows on
 
 # .tmux.conf の再読み込みを [prefix] r キーに割り当て
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
-bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded."
+bind-key r source-file ~/.tmux.conf\; display-message '$HOME/.tmux.conf reloaded.'
 
 # コピーモードの始まりを v に割り当て
 bind-key -t vi-copy v begin-selection
 
 # コピーモードの終わりを y に割り当て
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'
 
 # ペイン操作を Vi ライクに
 unbind-key -n J
@@ -56,6 +63,10 @@ bind-key -r K resize-pane -U
 bind-key -r L resize-pane -L
 bind-key -r H resize-pane -R
 
+# ショートカットでエディタ用の幅に変更
+bind-key E resize-pane -x 140
+
+
 
 # ---------------------------------------------------------------------------- "
 # appearance
@@ -70,6 +81,7 @@ set-option -g default-terminal "screen-256color"
 # ステータスラインのカラー
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg yellow
+
 
 
 # ---------------------------------------------------------------------------- "
@@ -89,8 +101,8 @@ set-option -g status-bg black
 set-option -g status-fg yellow
 
 # 右下に起動中の VM を一覧表示
-# ln -s /path/to/dotfiles/bin/vagrant-status.sh ~/bin/vagrant-status
-set-option -g status-right '#($HOME/bin/vagrant-status)'
+# ln -s /path/to/dotfiles/bin/vm-status.sh ~/bin/vm-status
+set-option -g status-right '#($HOME/bin/vm-status)'
 set-option -g status-right-length 50
 
 # ステータスラインの左下のスペースは一旦使わない
@@ -110,6 +122,7 @@ set-option -g display-panes-colour white
 set-option -g display-panes-active-colour yellow
 
 
+
 # ---------------------------------------------------------------------------- "
 # extra
 # ---------------------------------------------------------------------------- "
@@ -118,3 +131,19 @@ set-option -g display-panes-active-colour yellow
 # シェルスクリプト上でエディタ、シェル、タスクランナーなどに分割表示
 bind-key P command-prompt -p "projectname:" "run-shell 'proj %1'"
 
+
+
+
+# ---------------------------------------------------------------------------- "
+# plugins
+# ---------------------------------------------------------------------------- "
+
+set -g @tpm_plugins '         \
+  tmux-plugins/tpm            \
+  tmux-plugins/tmux-resurrect \
+  tmux-continuum              \
+  tmux-plugins/tmux-yank      \
+'
+run-shell '~/.tmux/plugins/tpm/tpm'
+
+set -g @resurrect-strategy-vim 'session'
