tmux の VM ステータス表示修正

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,8 +101,8 @@ set-option -g status-bg black
 set-option -g status-fg yellow
 
 # 右下に起動中の VM を一覧表示
-# ln -s /path/to/dotfiles/bin/vm-status.sh ~/bin/vm-status
-set-option -g status-right '#($HOME/bin/vm-status)'
+# ln -s /path/to/dotfiles/bin/ ~/bin
+set-option -g status-right '#($HOME/bin/vm_status)'
 set-option -g status-right-length 50
 
 # ステータスラインの左下のスペースは一旦使わない
