--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set-option -g prefix C-j
 # 元々のプレフィックスキーの Ctrl+b だと Vim とかぶるので退避
 unbind-key C-b
 
-# I love Vim.
+# キーバインドを vi ライクにする
 set-window-option -g mode-keys vi
 
 # ウィンドウ、ペインの番号を1から始まるようにする
@@ -16,22 +16,14 @@ set-window-option -g mode-keys vi
 set-option -g base-index 1
 set-option -g pane-base-index 1
 
-# Mac でクリップボード（ペーストボード）を使いやすく
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/
-# http://d.hatena.ne.jp/koseki2/20110816/TmuxCopy
-set-option -g default-command 'reattach-to-user-namespace -l zsh'
-#bind C-y run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-#bind C-p run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
-bind-key C-q run-shell 'reattach-to-user-namespace tmux-pbcopy'
-
 # ウィンドウ閉じたときに番号振り直して詰める
 set-option -g renumber-windows on
 
 # 新規ウィンドウ、ペイン分割時にパス引き継ぎ
 # http://qiita.com/naoty_k/items/954d1d0080d0a7d52584
-bind-key    c     new-window -c "#{pane_current_path}"
-bind-key    %     split-window -h -c "#{pane_current_path}"
-bind-key    '"'     split-window -v -c "#{pane_current_path}"
+#bind-key c   new-window -c "#{pane_current_path}"
+#bind-key %   split-window -h -c "#{pane_current_path}"
+#bind-key '"' split-window -v -c "#{pane_current_path}"
 
 
 
@@ -39,32 +31,15 @@ bind-key    '"'     split-window -v -c "#{pane_current_path}"
 # mapping
 # ---------------------------------------------------------------------------- "
 
-# .tmux.conf の再読み込みを [prefix] r キーに割り当て
+# .tmux.conf の再読み込みを [prefix] + r キーに割り当て
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
 bind-key r source-file ~/.tmux.conf\; display-message '$HOME/.tmux.conf reloaded.'
 
 # コピーモードの始まりを v に割り当て
-bind-key -t vi-copy v begin-selection
+#bind-key -t vi-copy v begin-selection
 
 # コピーモードの終わりを y に割り当て
-bind-key -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'
-
-# ペイン操作を Vi ライクに
-unbind-key -n J
-unbind-key -n K
-unbind-key -n L
-unbind-key -n H
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key h select-pane -L
-bind-key l select-pane -R
-bind-key -r J resize-pane -D
-bind-key -r K resize-pane -U
-bind-key -r L resize-pane -L
-bind-key -r H resize-pane -R
-
-# ショートカットでエディタ用の幅に変更
-bind-key E resize-pane -x 140
+#bind-key -t vi-copy y copy-pipe 'reattach-to-user-namespace pbcopy'
 
 
 
@@ -112,13 +87,13 @@ set-option -g status-left ''
 set-window-option -g window-status-format "[#I:#W]"
 set-window-option -g window-status-current-format "#[bg=yellow,fg=black][#I:#W]"
 
-# [prefix] q でペイン一覧表示したときの秒数
+# [prefix] + q でペイン一覧表示したときの秒数
 set-option -g display-panes-time 2000
 
-# [prefix] q でペイン一覧表示したときの通常カラー
+# [prefix] + q でペイン一覧表示したときの通常カラー
 set-option -g display-panes-colour white
 
-# [prefix] q でペイン一覧表示したときのアクティブカラー
+# [prefix] + q でペイン一覧表示したときのアクティブカラー
 set-option -g display-panes-active-colour yellow
 
 
@@ -127,12 +102,31 @@ set-option -g display-panes-active-colour yellow
 # plugins
 # ---------------------------------------------------------------------------- "
 
-set -g @tpm_plugins '         \
-  tmux-plugins/tpm            \
-  tmux-plugins/tmux-resurrect \
-  tmux-continuum              \
-  tmux-plugins/tmux-yank      \
-'
-run-shell '~/.tmux/plugins/tpm/tpm'
+# tmux plugin manager
+set -g @plugin 'tmux-plugins/tpm'
 
-set -g @resurrect-strategy-vim 'session'
+# tmux 上でのコピペ
+# [prefix] + [ でコピー開始
+# v => hjkl(Vim) => Enter でコピー終了
+# [prefix] + ] でペースト
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# tmux 上での検索＆コピー
+set -g @plugin 'tmux-plugins/tmux-copycat'
+
+# ウィンドウ、ペイン状態管理
+# [prefix] + C-s で保存
+# [prefix] + C-r で復元
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# ウィンドウ、ペインの自動状態保存
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# [prefix] + Tab でディレクトリのツリー表示
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+# ペイン移動の vi ライクなキーバインドセット
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+
+run '~/.tmux/plugins/tpm/tpm'
+
