tmux にセッション名の表示

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,8 +80,9 @@ set-option -g status-fg yellow
 set-option -g status-right '#($HOME/bin/vm_status)'
 set-option -g status-right-length 50
 
-# ステータスラインの左下のスペースは一旦使わない
-set-option -g status-left ''
+# 左下にセッション名を表示
+set-option -g status-left '[#S] '
+set-option -g status-left-length 50
 
 # ウィンドウ一覧表示でカレントを色反転に
 set-window-option -g window-status-format "[#I:#W]"
