--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,6 +29,16 @@ set-option -g renumber-windows on
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
 bind-key r source-file ~/.tmux.conf\; display-message '$HOME/.tmux.conf reloaded.'
 
+# 分割
+unbind-key c
+bind-key c new-window -c "#{pane_current_path}"
+
+unbind-key %
+bind % split-window -h -c "#{pane_current_path}"
+
+unbind-key '"'
+bind '"' split-window -v -c "#{pane_current_path}"
+
 
 
 # ---------------------------------------------------------------------------- "
