tmux でコピー開始を v や V でできるように

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,6 +39,12 @@ bind % split-window -h -c "#{pane_current_path}"
 unbind-key '"'
 bind '"' split-window -v -c "#{pane_current_path}"
 
+# コピー領域の始まり部分の選択を v に
+bind -t vi-copy v begin-selection
+
+# 上記の行選択バージョン
+bind -t vi-copy V select-line
+
 
 
 # ---------------------------------------------------------------------------- "
