--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,1 @@
-# Mac
-.DS_Store
-.AppleDouble
-.LSOverride
-._*
-
-# Windows
-Thumbs.db
-
-# tmux
-.tmux/
-
-# css/sass
-*.sass-cache
-
-# node/npm
-node_modules
-
-# ruby
-Gemfile.lock
-
-# other (DB, Editor etc)
-.bundle
-db/*.sqlite3*
-log/*.log
-*.log
-*.swp
-*~
+.vim/snippets/*.snip
