tmux 周りアップデート

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 # basic
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 
 # プレフィックスキーを Ctrl+j キーにする
 set-option -g prefix C-j
@@ -21,11 +21,11 @@ set-option -g renumber-windows on
 
 
 
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 # mapping
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 
-# .tmux.conf の再読み込みを [prefix] + r キーに割り当て
+# .tmux.conf の再読み込みを prefix + r キーに割り当て
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
 bind-key r source-file ~/.tmux.conf\; display-message '$HOME/.tmux.conf reloaded.'
 
@@ -47,12 +47,16 @@ bind -t vi-copy V select-line
 
 
 
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 # appearance
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 
-# タイトル表示あり
+# タイトル表示のカスタマイズ
 set-option -g set-titles on
+
+# タイトル表示のカスタマイズフォーマット
+# http://man.openbsd.org/OpenBSD-current/man1/tmux.1#FORMATS
+set-option -g set-titles-string "#{session_name} [#{window_index}:#{window_name}] pane#{pane_index}(#{pane_tty}) w:#{pane_width} h:#{pane_height}"
 
 # カラー基本設定
 set-option -g default-terminal "screen-256color"
@@ -61,11 +65,14 @@ set-option -g default-terminal "screen-256color"
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg yellow
 
+# ステータスラインの位置を上に
+set-option -g status-position top
 
 
-# ---------------------------------------------------------------------------- "
+
+# ---------------------------------------------------------------------------- #
 # statusline
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 
 # UTF-8 使っていいかどうか
 set-option -g status-utf8 on
@@ -92,42 +99,43 @@ set-option -g status-left-length 50
 set-window-option -g window-status-format "[#I:#W]"
 set-window-option -g window-status-current-format "#[bg=yellow,fg=black][#I:#W]"
 
-# [prefix] + q でペイン一覧表示したときの秒数
+# prefix + q でペイン一覧表示したときの秒数
 set-option -g display-panes-time 2000
 
-# [prefix] + q でペイン一覧表示したときの通常カラー
+# prefix + q でペイン一覧表示したときの通常カラー
 set-option -g display-panes-colour white
 
-# [prefix] + q でペイン一覧表示したときのアクティブカラー
+# prefix + q でペイン一覧表示したときのアクティブカラー
 set-option -g display-panes-active-colour yellow
 
 
 
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 # plugins
-# ---------------------------------------------------------------------------- "
+# ---------------------------------------------------------------------------- #
 
 # tmux plugin manager
+# prefix + I でインストール
 set -g @plugin 'tmux-plugins/tpm'
 
 # tmux 上でのコピペ
-# [prefix] + [ でコピー開始
+# prefix + [ でコピー開始
 # v => hjkl(Vim) => Enter でコピー終了
-# [prefix] + ] でペースト
+# prefix + ] でペースト
 set -g @plugin 'tmux-plugins/tmux-yank'
 
 # tmux 上での検索＆コピー
 set -g @plugin 'tmux-plugins/tmux-copycat'
 
 # ウィンドウ、ペイン状態管理
-# [prefix] + C-s で保存
-# [prefix] + C-r で復元
+# prefix -> <C-s> で保存
+# prefix -> <C-r> で復元
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # ウィンドウ、ペインの自動状態保存
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# [prefix] + Tab でディレクトリのツリー表示
+# prefix + Tab でディレクトリのツリー表示
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # ペイン移動の vi ライクなキーバインドセット
