update status line vm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -88,7 +88,7 @@ set-option -g status-fg yellow
 
 # 右下に起動中の VM を一覧表示
 # ln -s /path/to/dotfiles/bin/ ~/bin
-set-option -g status-right '#($HOME/bin/vm_status.sh)'
+set-option -g status-right '#(${HOME}/bin/vm_status.sh)'
 set-option -g status-right-length 50
 
 # 左下にセッション名を表示
