--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,8 +65,8 @@ set-option -g default-terminal "screen-256color"
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg yellow
 
-# ステータスラインの位置を上に
-set-option -g status-position top
+# ステータスラインの位置を下に（Vim の tabpage と誤認しやすい）
+set-option -g status-position bottom
 
 
 
