vim submode plugin 追加

--- a/.vim/settings/bundle.toml
+++ b/.vim/settings/bundle.toml
@@ -32,6 +32,9 @@
 [[plugins]]
 repository = 'Shougo/unite.vim'
 
+[[plugins]]
+repository = 'kana/vim-submode'
+
 
 
 # ---------------------------------------------------------------------------- #
