--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set-option -g renumber-windows on
 # mapping
 # ---------------------------------------------------------------------------- #
 
-# .tmux.conf の再読み込みを prefix + r キーに割り当て
+# .tmux.conf の再読み込みを prefix -> r キーに割り当て
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
 bind-key r source-file ~/.tmux.conf\; display-message '$HOME/.tmux.conf reloaded.'
 
@@ -73,9 +73,6 @@ set-option -g status-position bottom
 # ---------------------------------------------------------------------------- #
 # statusline
 # ---------------------------------------------------------------------------- #
-
-# UTF-8 使っていいかどうか
-set-option -g status-utf8 on
 
 # ステータスラインのアップデート間隔（秒）
 set-option -g status-interval 5
@@ -135,7 +132,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # ウィンドウ、ペインの自動状態保存
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# prefix + Tab でディレクトリのツリー表示
+# prefix -> Tab でディレクトリのツリー表示
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # ペイン移動の vi ライクなキーバインドセット
