--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,16 +34,14 @@ unbind-key c
 bind-key c new-window -c "#{pane_current_path}"
 
 unbind-key %
-bind % split-window -h -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
 
 unbind-key '"'
-bind '"' split-window -v -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
 
-# コピー領域の始まり部分の選択を v に
-bind -t vi-copy v begin-selection
-
-# 上記の行選択バージョン
-bind -t vi-copy V select-line
+# tmux 内のシェルの立ち上げに reattach-to-user-namespace を通す
+set-option -g default-shell $SHELL
+set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 
 
@@ -61,18 +59,18 @@ set-option -g set-titles-string "#{session_name} [#{window_index}:#{window_name}
 # カラー基本設定
 set-option -g default-terminal "screen-256color"
 
+
+
+# ---------------------------------------------------------------------------- #
+# statusline
+# ---------------------------------------------------------------------------- #
+
 # ステータスラインのカラー
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg yellow
 
 # ステータスラインの位置を下に（Vim の tabpage と誤認しやすい）
 set-option -g status-position bottom
-
-
-
-# ---------------------------------------------------------------------------- #
-# statusline
-# ---------------------------------------------------------------------------- #
 
 # ステータスラインのアップデート間隔（秒）
 set-option -g status-interval 5
@@ -113,30 +111,34 @@ set-option -g display-panes-active-colour yellow
 
 # tmux plugin manager
 # prefix + I でインストール
-set -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tpm'
 
 # tmux 上でのコピペ
 # prefix + [ でコピー開始
-# v => hjkl(Vim) => Enter でコピー終了
+# v => hjkl(Vim) => y (or Enter) でコピー終了
 # prefix + ] でペースト
-set -g @plugin 'tmux-plugins/tmux-yank'
+# プラグインが設定済みなので個別の設定不要
+# iTerm2 の Allow clipboard access to terminal apps を必ず OFF に！
+set-option -g @plugin 'tmux-plugins/tmux-yank'
+# なぜか設定されていないので上書き
+bind-key -t vi-copy v begin-selection
 
 # tmux 上での検索＆コピー
-set -g @plugin 'tmux-plugins/tmux-copycat'
+set-option -g @plugin 'tmux-plugins/tmux-copycat'
 
 # ウィンドウ、ペイン状態管理
 # prefix -> <C-s> で保存
 # prefix -> <C-r> で復元
-set -g @plugin 'tmux-plugins/tmux-resurrect'
+set-option -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # ウィンドウ、ペインの自動状態保存
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set-option -g @plugin 'tmux-plugins/tmux-continuum'
 
 # prefix -> Tab でディレクトリのツリー表示
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+set-option -g @plugin 'tmux-plugins/tmux-sidebar'
 
 # ペイン移動の vi ライクなキーバインドセット
-set -g @plugin 'tmux-plugins/tmux-pain-control'
+set-option -g @plugin 'tmux-plugins/tmux-pain-control'
 
-run '~/.tmux/plugins/tpm/tpm'
-
+# プラグイン用のシェルスクリプトを実行
+run-shell '~/.tmux/plugins/tpm/tpm'
