--- a/ansible/roles/initial-configuration/tasks/main.yml
+++ b/ansible/roles/initial-configuration/tasks/main.yml
@@ -14,6 +14,7 @@
 - name: ホスト名の取得
   shell: scutil --get HostName
   register: hostname_status
+  ignore_errors: True
   changed_when: False
   tags: initial-configuration
 
@@ -26,6 +27,7 @@
 - name: ローカルホスト名の取得
   shell: scutil --get LocalHostName
   register: localhostname_status
+  ignore_errors: True
   changed_when: False
   tags: initial-configuration
 
