--- a/.tslintrc.json
+++ b/.tslintrc.json
@@ -5,6 +5,12 @@
    */
   "extends": "tslint:recommended",
   "rules": {
+    "arrow-parens": [
+      true,
+      "ban-single-arg-parens"
+    ],
+    "no-string-literal": false,
+    "only-arrow-functions": false,
     "object-literal-sort-keys": false,
     "ordered-imports": false,
     "quotemark": "single",
