ansible に .git_template ディレクトリ追加

--- a/ansible/group_vars/localhost.sample
+++ b/ansible/group_vars/localhost.sample
@@ -31,6 +31,7 @@ symlinks:
   - src: .editorconfig
   - src: .eslintrc.json
   - src: .gemrc
+  - src: .git_template
   - src: .gitconfig
   - src: .gitignore.global
     dest: .gitignore
