--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,22 +2,21 @@
 # basic
 # ---------------------------------------------------------------------------- #
 
-# プレフィックスキーを Ctrl+j キーにする
+# replace Ctrl-B with Ctrl-J
 set-option -g prefix C-j
-
-# 元々のプレフィックスキーの Ctrl+b だと Vim とかぶるので退避
 unbind-key C-b
 
-# キーバインドを vi ライクにする
+# vi mode in tmux
 set-window-option -g mode-keys vi
 
-# ウィンドウ、ペインの番号を1から始まるようにする
-# （キーボード配置は1が左にあるので選択しやすい）
+# one based index (keyboard order)
 set-option -g base-index 1
 set-option -g pane-base-index 1
 
-# ウィンドウ閉じたときに番号振り直して詰める
+# renumbering after delete window
 set-option -g renumber-windows on
+
+set-option -sg escape-time 10
 
 
 
@@ -25,23 +24,26 @@ set-option -g renumber-windows on
 # mapping
 # ---------------------------------------------------------------------------- #
 
-# .tmux.conf の再読み込みを prefix -> r キーに割り当て
+# reload .tmux.conf (override)
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
-bind-key r source-file ~/.tmux.conf\; display-message '$HOME/.tmux.conf reloaded.'
+bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded."
 
-# 分割
+# window, pane
 unbind-key c
 bind-key c new-window -c "#{pane_current_path}"
-
 unbind-key %
 bind-key % split-window -h -c "#{pane_current_path}"
-
 unbind-key '"'
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
-# tmux 内のシェルの立ち上げに reattach-to-user-namespace を通す
-set-option -g default-shell $SHELL
+# share clipboard between tmux/vim
+# before: `brew install reattach-to-user-namespace`
+set-option -g default-shell "$SHELL"
 set-option -g default-command "reattach-to-user-namespace -l $SHELL"
+
+# yank in tmux
+bind-key -T copy-mode-vi "v" send-keys -X begin-selection
+bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 
 
@@ -49,15 +51,14 @@ set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 # appearance
 # ---------------------------------------------------------------------------- #
 
-# タイトル表示のカスタマイズ
-set-option -g set-titles on
-
-# タイトル表示のカスタマイズフォーマット
+# customize tmux title
 # http://man.openbsd.org/OpenBSD-current/man1/tmux.1#FORMATS
+set-option -g set-titles on
 set-option -g set-titles-string "#{session_name} [#{window_index}:#{window_name}] pane#{pane_index}(#{pane_tty}) w:#{pane_width} h:#{pane_height}"
 
-# カラー基本設定
-set-option -g default-terminal "screen-256color"
+# color settings
+set-option -g default-terminal screen-256color
+set -g terminal-overrides "xterm:colors=256"
 
 
 
@@ -65,42 +66,35 @@ set-option -g default-terminal "screen-256color"
 # statusline
 # ---------------------------------------------------------------------------- #
 
-# ステータスラインのカラー
+# statusline color
 set-window-option -g window-status-current-bg black
 set-window-option -g window-status-current-fg yellow
-
-# ステータスラインの位置を下に（Vim の tabpage と誤認しやすい）
-set-option -g status-position bottom
-
-# ステータスラインのアップデート間隔（秒）
-set-option -g status-interval 5
-
-# ステータスラインの背景色
 set-option -g status-bg black
-
-# ステータスラインの文字色
 set-option -g status-fg yellow
 
-# 右下に起動中の VM を一覧表示
-# ln -s /path/to/dotfiles/bin/ ~/bin
-set-option -g status-right '#(${HOME}/bin/vm_status.sh)'
+# position
+set-option -g status-position bottom
+
+# flush interval
+set-option -g status-interval 5
+
+# customize right area (vagrant machines)
+# before: `ln -s /path/to/dotfiles/bin/ ~/bin`
+set-option -g status-right "#(${HOME}/bin/vm_status.sh)"
 set-option -g status-right-length 50
 
-# 左下にセッション名を表示
-set-option -g status-left '[#S] '
+# customize left area (session: windows)
+set-option -g status-left "[#S] "
 set-option -g status-left-length 50
 
-# ウィンドウ一覧表示でカレントを色反転に
+# window format
 set-window-option -g window-status-format "[#I:#W]"
 set-window-option -g window-status-current-format "#[bg=yellow,fg=black][#I:#W]"
 
-# prefix + q でペイン一覧表示したときの秒数
+# showing pane numbers setting
+# show: prefix+Q
 set-option -g display-panes-time 2000
-
-# prefix + q でペイン一覧表示したときの通常カラー
 set-option -g display-panes-colour white
-
-# prefix + q でペイン一覧表示したときのアクティブカラー
 set-option -g display-panes-active-colour yellow
 
 
@@ -110,35 +104,23 @@ set-option -g display-panes-active-colour yellow
 # ---------------------------------------------------------------------------- #
 
 # tmux plugin manager
-# prefix + I でインストール
-set-option -g @plugin 'tmux-plugins/tpm'
+# install: prefix+I
+set-option -g @plugin "tmux-plugins/tpm"
 
-# tmux 上でのコピペ
-# prefix + [ でコピー開始
-# v => hjkl(Vim) => y (or Enter) でコピー終了
-# prefix + ] でペースト
-# プラグインが設定済みなので個別の設定不要
-# iTerm2 の Allow clipboard access to terminal apps を必ず OFF に！
-set-option -g @plugin 'tmux-plugins/tmux-yank'
-# なぜか設定されていないので上書き
-bind-key -t vi-copy v begin-selection
+# restore tmux environment after system restart
+set-option -g @plugin "tmux-plugins/tmux-resurrect"
 
-# tmux 上での検索＆コピー
-set-option -g @plugin 'tmux-plugins/tmux-copycat'
+# continuous saving of tmux environment
+set-option -g @plugin "tmux-plugins/tmux-continuum"
+set -g @continuum-save-interval 10
 
-# ウィンドウ、ペイン状態管理
-# prefix -> <C-s> で保存
-# prefix -> <C-r> で復元
-set-option -g @plugin 'tmux-plugins/tmux-resurrect'
+# tree directory listing for the current path
+# show toggle: prefix+Tab
+set-option -g @plugin "tmux-plugins/tmux-sidebar"
 
-# ウィンドウ、ペインの自動状態保存
-set-option -g @plugin 'tmux-plugins/tmux-continuum'
+# for vi pain-control
+# refs: https://github.com/tmux-plugins/tmux-pain-control
+set-option -g @plugin "tmux-plugins/tmux-pain-control"
 
-# prefix -> Tab でディレクトリのツリー表示
-set-option -g @plugin 'tmux-plugins/tmux-sidebar'
-
-# ペイン移動の vi ライクなキーバインドセット
-set-option -g @plugin 'tmux-plugins/tmux-pain-control'
-
-# プラグイン用のシェルスクリプトを実行
-run-shell '~/.tmux/plugins/tpm/tpm'
+# initialize tmux plugin manager
+run-shell "~/.tmux/plugins/tpm/tpm"
