update global gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,8 +3,9 @@
   precomposeunicode = true # for utf-8-mac(NFD)
   bare = false
   excludesfile = ~/.gitignore
-  editor = vim
+  editor = nvim
   pager = lv -c
+  autocrlf = false
 [clean]
   requireforce = true
 [color]
@@ -33,5 +34,26 @@
   rebase = preserve
 [push]
   default = current
+[alias]
+  zip = "!zip() {\
+    local FILENAME; \
+    local COMMITID; \
+    if [ $# -eq 0 ]; \
+    then \
+      echo \"use git zip FILENAME [COMMITID]\"; \
+      exit 1; \
+    fi; \
+    if [ $# -eq 1 ]; \
+    then \
+      FILENAME=$1; \
+      COMMITID=4b825dc642cb6eb9a060e54bf8d69288fbee4904; \
+    fi; \
+    if [ $# -eq 2 ]; \
+    then \
+      FILENAME=$1; \
+      COMMITID=$2; \
+    fi; \
+    git archive --format=zip -o ${FILENAME} HEAD --worktree-attributes `git diff --diff-filter=AMCR --name-only ${COMMITID} HEAD --`; \
+  };zip"
 [include]
   path = ~/.gitconfig.local
